versioned_docs/version-0.1.0/2.getting-started.md
---
id: getting-started
title: Getting Started
---

Getting started with TerrabaseDB is easy 😊 (and fun!).

### Step 1: Download a bundle

Head over to [this page](https://github.com/terrabasedb/terrabase/releases/v0.1.0) and download the `tdb` and `tsh` binaries (only pre-built Linux binaries are available; for other platforms, you will need to [build from source](building-from-source)).

### Step 2: Make the files runnable

If you're on a *nix system, run `chmod +x tdb tsh` to make the files executable. If you're on Windows, right-click the files and then check the `Unblock` checkbox and click on the `Apply` button.

### Step 3: Start the database server

In the directory where you extracted the files, run `./tdb` on *nix systems or simply `tdb` on Windows systems. That's all there is to starting the database server!

### Step 4: Run the shell `tsh`

`tsh` is the shell that is shipped with the bundle. Run it, just like you did with the database server. Now enter commands in the shell, and have fun!
You can now run the actions [here](Actions/overview)!

You're done with setting up `tdb` 🎉!